--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
-.header {
+#header {
   background-image: url('https://i.unu.edu/media/unu.edu/attachment/95787/SDEX-07.png');
-  height: 500px;
+  height: 550px;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -24,4 +24,24 @@
 
 .recycle {
   width: 100px;
+}
+
+.watch-button {
+  padding-left: 30%;
+}
+
+.footer {
+  color: white;
+  padding: 50px;
+  background-color: lightblue;
+}
+
+.col1 {
+  float: left;
+  padding: 20px 40px 0px 0px;
+}
+
+.col2 {
+  padding: 20px;
+  padding-left: 40px;
 }
