--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,6 +13,11 @@
   padding: 30px;
 }
 
+.video-intro {
+  padding-top: 50px;
+  font-weight: bold;
+}
+
 .convo-intro {
   font-family: '-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif';
 }
@@ -33,7 +38,7 @@
 .footer {
   color: white;
   padding: 50px;
-  background-color: lightblue;
+  background-color: #28536B;
 }
 
 .col1 {
