--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,9 @@
 #header {
-  background-image: url('https://i.unu.edu/media/unu.edu/attachment/95787/SDEX-07.png');
-  height: 550px;
+  /* background-image: url('https://i.unu.edu/media/unu.edu/attachment/95787/SDEX-07.png'); */
+  /* background-image: url('https://i.unu.edu/media/ourworld.unu.edu-en/article/9546/UN-Launches-Decade-long-Sustainable-Energy-for-All-Initiative.jpg'); */
+ 
+  /* background-image: url('https://apolitical.co/wp-content/uploads/2018/02/jason-blackeye-212990-unsplash-1000x670.jpg'); */
+  background-image: url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -8,7 +11,7 @@
   color: #FFF;
   box-sizing: border-box;
   font-family: '-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif';
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bold;
   padding: 30px;
 }
