--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,12 +3,13 @@
   /* background-image: url('https://i.unu.edu/media/ourworld.unu.edu-en/article/9546/UN-Launches-Decade-long-Sustainable-Energy-for-All-Initiative.jpg'); */
  
   /* background-image: url('https://apolitical.co/wp-content/uploads/2018/02/jason-blackeye-212990-unsplash-1000x670.jpg'); */
-  background-image: url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg');
+  /* background-image: url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg'); */
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 2;
-  color: #FFF;
+  color: #FFFFFF;
   box-sizing: border-box;
   font-family: '-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif';
   font-size: 50px;
@@ -35,7 +36,7 @@
 }
 
 .watch-button {
-  padding-left: 30%;
+  padding-left: 45%;
 }
 
 .footer {
@@ -46,10 +47,21 @@
 
 .col1 {
   float: left;
-  padding: 20px 40px 0px 0px;
+  padding-top: 20px;
+  padding-right: 20%;
+  padding-left: 20%;
 }
 
 .col2 {
   padding: 20px;
-  padding-left: 40px;
+  padding-left: 240px; 
+}
+
+.footer a {
+  color: white;
+  padding-left: 5%;
+}
+
+.copyright {
+  padding-left: 40%;
 }
