--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,7 +11,7 @@
   z-index: 2;
   color: #FFFFFF;
   box-sizing: border-box;
-  font-family: '-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif';
+  font-family: Arial, Helvetica, sans-serif
   font-size: 50px;
   font-weight: bold;
   padding: 30px;
