add a semicolon in header styles.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,4 @@
 #header {
-  /* background-image: url('https://i.unu.edu/media/unu.edu/attachment/95787/SDEX-07.png'); */
-  /* background-image: url('https://i.unu.edu/media/ourworld.unu.edu-en/article/9546/UN-Launches-Decade-long-Sustainable-Energy-for-All-Initiative.jpg'); */
- 
-  /* background-image: url('https://apolitical.co/wp-content/uploads/2018/02/jason-blackeye-212990-unsplash-1000x670.jpg'); */
-  /* background-image: url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg'); */
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://www.nsempire.com/wp-content/uploads/2020/03/wheat-field-green.jpg');
   background-attachment: fixed;
   background-size: cover;
@@ -11,7 +6,7 @@
   z-index: 2;
   color: #FFFFFF;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 50px;
   font-weight: bold;
   padding: 30px;
